# apps-deploy

./: .dockerignore  .env.tpl  .gitignore  .mise.toml  README.md  codebook.toml  compose-service.sh  docker-bake.hcl  docker-compose.yml  hoarder.env.tpl  inventory.yaml  karakeep.env.tpl  playbook.yaml  pyproject.toml  requirements.yml  taskfile.yaml  update-containers.sh  versions.sh
.github/: dependabot.yml
.github/workflows/: build-caddy.yaml  build-calibre.yaml  build-image.yaml  deploy.yaml  mirror-repos.yaml
atuin/: docker-compose.yml
caddy/: Dockerfile  caddy.env.tpl  docker-compose.yml
caddy/conf/: Caddyfile
calibre/: Dockerfile  docker-compose.yml  start-calibre-server.sh
forgejo/: docker-compose.yml  sync-github-repos.py
karakeep/: archive.py  docker-compose.yml  karakeep.env.tpl
kosyncserver/: docker-compose.yml
readeck/: docker-compose.yml
