[project]
name = "apps-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-dev-tools>=24.10.2",
    "ansible-lint>=6.16",
    "ansible>=10.6.0",
]

[tool.uv]
environments = ["platform_system != 'Windows'"]
package = false
